tests/error/failDecl.sk
int main() {
    bool b = true /* needs ; */
    return 0;
}